# RedisGears-2.0

./: README.md  run.sh
.github/: rust.yml
.github/workflows/: rust.yml
docs/: create_development_environment.md  stream_processing.md  sync_and_async_run.md
pytests/: common.py  test_acl.py  test_basics.py  test_errors.py  test_notifications_consumers.py  test_stream_reader.py
redisgears_core/: Cargo.toml
redisgears_core/src/: background_run_ctx.rs  background_run_scope_guard.rs  compiled_library_api.rs  config.rs  keys_notifications.rs  keys_notifications_ctx.rs  lib.rs  rdb.rs  run_ctx.rs  stream_reader.rs  stream_run_ctx.rs
redisgears_plugin_api/src/redisgears_plugin_api/: backend_ctx.rs  function_ctx.rs  keys_notifications_consumer_ctx.rs  load_library_ctx.rs  mod.rs  run_function_ctx.rs  stream_ctx.rs
redisgears_v8_plugin/src/: lib.rs  v8_backend.rs  v8_function_ctx.rs  v8_library_ctx.rs  v8_native_functions.rs  v8_notifications_ctx.rs  v8_script_ctx.rs  v8_stream_ctx.rs
