[package]
name = "redisgears_core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#redis-module = { version="1.0", features = ["experimental-api"]}
redis-module = { git = "https://github.com/RedisLabsModules/redismodule-rs", branch = "api_extentions", features = ["experimental-api"]}
libloading = "0.7"
redisgears_plugin_api = {path="../redisgears_plugin_api/"}
threadpool = "1.8.1"

[build-dependencies]

[lib]
crate-type = ["cdylib", "rlib"]
name = "redisgears"
